--- a/index.html
+++ b/index.html
@@ -41,21 +41,9 @@
     <p>John S. Stritzinger</p>
     <p>University of South Carolina</p>
     <p>Computer Science 242 – Web Applications</p>
+    <p><img src="./images/image1.png" alt="Course Image"></p>
 </header>
 
-<!-- OPTIONAL: If you want the new horizontal nav, keep this -->
-<!-- If not, remove it -->
-<nav class="main-nav">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="242index.html">242 Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="interests.html">My Interests</a></li>
-        <li><a href="usc.html">USC</a></li>
-        <li><a href="portfoliopage.html">Portfolio</a></li>
-        <li><a href="vitae.html">Vitae</a></li>
-    </ul>
-</nav>
 
 <section class="top-section">
 
