--- a/index.html
+++ b/index.html
@@ -44,10 +44,43 @@
     <p><img src="./images/image1.png" alt="Course Image"></p>
 </header>
 
-
+<!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
 
     <div class="important-text">
+        <h3>Very Important Text</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+    </div>
+
+    <div class="tasks">
+
+        <div class="task-item">
+            <h3>Beach Volleyball</h3>
+            <a href="#"><img src="./images/titlepic1.png" alt="Beach Volleyball"></a>
+        </div>
+
+        <div class="task-item">
+            <h3>Surfing Lessons</h3>
+            <a href="#"><img src="./images/titlepic2.png" alt="Surfing Lessons"></a>
+        </div>
+
+        <div class="task-item">
+            <h3>Jet Ski Rental</h3>
+            <a href="#"><img src="./images/titlepic3.png" alt="Jet Ski Rental"></a>
+        </div>
+
+        <div class="task-item">
+            <h3>Sunset Cruise</h3>
+            <a href="#"><img src="./images/titlepic4.png" alt="Sunset Cruise"></a>
+        </div>
+
+    </div>
+        
+</section>
+<section class="some-section">
+
+    <div class="someimportant-text">
         <h2>Class Overview</h2>
         <p>This is a Web Development class focused on HTML, CSS, JavaScript, and React Programming...</p>
 
