--- a/index.html
+++ b/index.html
@@ -78,6 +78,38 @@
     </div>
         
 </section>
+<!-- IDEA SECTIONS -->
+    <section class="ideas">
+    <div class="idea left">
+        <HR color="blue">    
+        <div class="idea-text">
+            <h3>Idea One</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        </div>
+        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
+    <HR color="blue">
+    </div>
+
+    <div class="idea right">
+        <HR color="blue">    
+        <div class="idea-text">
+            <h3>Idea Two</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        </div>
+        <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
+    <HR color="blue">
+    </div>
+    <div class="idea left">
+    <HR color="blue">    
+        <div class="idea-text">
+            <h3>Idea Three</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        </div>
+        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
+    <HR color="blue">    
+    </div>
+</section>
+    
 <section class="some-section">
 
     <div class="someimportant-text">
