--- a/index.html
+++ b/index.html
@@ -48,31 +48,30 @@
 <section class="top-section">
 
     <div class="important-text">
-        <h3>Very Important Text</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-    </div>
+        <h3>Class Overview</h3>
+        <p>This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the second in the sequence following Computer Science 102(CSS/Javascript).</p>
+        </div>
 
     <div class="tasks">
 
         <div class="task-item">
-            <h3>Beach Volleyball</h3>
-            <a href="#"><img src="./images/titlepic1.png" alt="Beach Volleyball"></a>
+            <h3>Assignments</h3>
+            <a href="242index.html"><img src="./images/titlepic1.png" alt="Assignments"></a>
         </div>
 
         <div class="task-item">
-            <h3>Surfing Lessons</h3>
-            <a href="#"><img src="./images/titlepic2.png" alt="Surfing Lessons"></a>
+            <h3>Vitae</h3>
+            <a href="vitae.html"><img src="./images/titlepic2.png" alt="Vitae"></a>
         </div>
 
         <div class="task-item">
-            <h3>Jet Ski Rental</h3>
-            <a href="#"><img src="./images/titlepic3.png" alt="Jet Ski Rental"></a>
+            <h3>Portfolio</h3>
+            <a href="portfoliopage.html"><img src="./images/titlepic3.png" alt="Portfolio"></a>
         </div>
 
         <div class="task-item">
-            <h3>Sunset Cruise</h3>
-            <a href="#"><img src="./images/titlepic4.png" alt="Sunset Cruise"></a>
+            <h3>AboutMe</h3>
+            <a href="about.html"><img src="./images/titlepic4.png" alt="About"></a>
         </div>
 
     </div>
