--- a/index.html
+++ b/index.html
@@ -76,31 +76,48 @@
     </div>
         
 </section>
-
-<section class="some-section">
-
-    <div class="someimportant-text">
-        <h2>Class Overview</h2>
-        <p>This is a Web Development class focused on HTML, CSS, JavaScript, and React Programming...</p>
-
-        <h3>Github Repo</h3>
+    <!-- IDEA SECTIONS -->
+    <section class="ideas">
+    <div class="idea left">
+        <HR color="blue">    
+        <div class="idea-text">
+        <h3>Projects</h3>
         <ul>
-            <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
-            <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Project Description</a></li>
         </ul>
+    </div>
+        </div>
+        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
+    <HR color="blue">
+    </div>
 
+    <div class="idea right">
+        <HR color="blue">    
+        <div class="idea-text">
         <h2>Assignments</h2>
         <ul>
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three</a></li>
         </ul>
-
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Project Description</a></li>
-        </ul>
+        </div>
+        <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
+    <HR color="blue">
     </div>
+    <div class="idea left">
+    <HR color="blue">    
+        <div class="idea-text">
+        <h2>Github Repo</h2>
+        <ul>
+            <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
+            <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
+        </ul>
+        </div>
+        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
+    <HR color="blue">    
+    </div>
+</section>
+
 
 </section>
 
