--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three</a></li>
         </ul>
         </div>
-        <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
+        <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
        </div>
     <div class="idea left">
            <div class="idea-text">
@@ -108,7 +108,7 @@
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
         </ul>
         </div>
-        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
+        <img src="./images/github.png" width="200px" height="200px" alt="Idea 3">
        </div>
 </section>
 
