--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     <h1>SiteHome</h1>
     <p>John S. Stritzinger</p>
     <p>University of South Carolina</p>
-    <p><img src="./images/image1.png" alt="Course Image"></p>
 </header>
 
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
@@ -70,7 +69,7 @@
 
         <div class="task-item">
             <h3>AboutMe</h3>
-            <a href="about.html"><img src="./images/titlepic4.png" alt="About"></a>
+            <a href="about.html"><img src="./images/image1.png" alt="AboutMe"></a>
         </div>
 
     </div>
@@ -85,8 +84,7 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Project Description</a></li>
         </ul>
     </div>
-        </div>
-        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
+         <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
        </div>
 
     <div class="idea right">
