--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Project Description</a></li>
         </ul>
     </div>
-         <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
+         <img src="./images/react.png" width="200px" height="200px" alt="Idea 1">
        </div>
 
     <div class="idea right">
