--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <div class="tasks">
 
         <div class="task-item">
-            <h3>Assignments</h3>
-            <a href="242index.html"><img src="./images/titlepic1.png" width="200px" height="300px" alt="Assignments"></a>
+            <h3>Interests</h3>
+            <a href="interests.html"><img src="./images/image5.png" width="200px" height="300px" alt="Assignments"></a>
         </div>
 
         <div class="task-item">
