--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
 
         <div class="task-item">
             <h3>AboutMe</h3>
-            <a href="about.html"><img src="./images/image1.png" width="200px" height="300px" alt="AboutMe"></a>
+            <a href="about.html"><img src="./images/image1.png" alt="AboutMe"></a>
         </div>
         
         <div class="task-item">
             <h3>Interests</h3>
-            <a href="interests.html"><img src="./images/image5.png" width="200px" height="300px" alt="Assignments"></a>
+            <a href="interests.html"><img src="./images/image5.png" alt="Assignments"></a>
         </div>
 
         <div class="task-item">
             <h3>Vitae</h3>
-            <a href="vitae.html"><img src="./images/vitae.png" width="200px" height="300px" alt="Vitae"></a>
+            <a href="vitae.html"><img src="./images/vitae.png" alt="Vitae"></a>
         </div>
 
         <div class="task-item">
             <h3>Portfolio</h3>
-            <a href="portfoliopage.html"><img src="./images/p3.png" width="200px" height="300px" alt="Portfolio"></a>
+            <a href="portfoliopage.html"><img src="./images/p3.png" alt="Portfolio"></a>
         </div>
 
     </div>
