--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            <div class="idea-text">
         <h3>Projects</h3>
         <ul>
-            <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Project Description</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">Project Description</a></li>
         </ul>
     </div>
          <img src="./images/react.png" width="200px" height="200px" alt="Idea 1">
