--- a/index.html
+++ b/index.html
@@ -53,23 +53,18 @@
     <div class="tasks">
 
         <div class="task-item">
-            <h3>AboutMe</h3>
-            <a href="about.html"><img src="./images/image1.png" alt="AboutMe"></a>
+            <h3>Assignment1</h3>
+            <a href="about.html"><img src="./images/image1.png" alt="Assignment1"></a>
         </div>
         
         <div class="task-item">
-            <h3>Interests</h3>
-            <a href="interests.html"><img src="./images/image5.png" alt="Assignments"></a>
+            <h3>Assignment2</h3>
+            <a href="interests.html"><img src="./images/image5.png" alt="Assignment2"></a>
         </div>
 
         <div class="task-item">
-            <h3>Vitae</h3>
-            <a href="vitae.html"><img src="./images/vitae.png" alt="Vitae"></a>
-        </div>
-
-        <div class="task-item">
-            <h3>Portfolio</h3>
-            <a href="portfoliopage.html"><img src="./images/p3.png" alt="Portfolio"></a>
+            <h3>Assignment3</h3>
+            <a href="vitae.html"><img src="./images/vitae.png" alt="Assignment3"></a>
         </div>
 
     </div>
