--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
         <div class="task-item">
             <h3>Assignment1</h3>
-            <a href="about.html"><img src="./images/image1.png" alt="Assignment1"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm"><img src="./images/titlepic1.png" width="400px" height="300px" alt="Assignment1"></a>
         </div>
         
         <div class="task-item">
             <h3>Assignment2</h3>
-            <a href="interests.html"><img src="./images/image5.png" alt="Assignment2"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/titlepic2.png" width="400px" height="300px" alt="Assignment2"></a>
         </div>
 
         <div class="task-item">
             <h3>Assignment3</h3>
-            <a href="vitae.html"><img src="./images/vitae.png" alt="Assignment3"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="titlepic3.png" width="400px" height="300px" alt="Assignment3"></a>
         </div>
 
     </div>
