--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <div class="task-item">
             <h3>Assignment3</h3>
-            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="titlepic3.png" width="400px" height="300px" alt="Assignment3"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/titlepic3.png" width="400px" height="300px" alt="Assignment3"></a>
         </div>
 
     </div>
