--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="task-item">
             <h3>Assignment4</h3>
-            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/titlepic4.png"  alt="Assignment3"></a>
+            <a href="242index.html"><img src="./images/titlepic4.png"  alt="Assignment4"></a>
         </div>
 
         
