--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -43,7 +43,7 @@
 </nav>
 
 <header>
-    <h4>Portia's Layout Page</h4>
+    <h4>Assignment 3 - Portia's Flexbox Layout</h4>
     <h5>Spring 2026</h5>
 </header>
 <div class="mastercontainer">
