--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="task-item">
             <h3>Assignment3</h3>
-            <h5>Portias Template</h5>
+            <h5>Portias FlexTemplate</h5>
             <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/titlepic3.png" alt="Assignment3"></a>
         </div>
 
