--- a/242index.html
+++ b/242index.html
@@ -37,7 +37,7 @@
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
 
 <header>
-    <h1>SiteHome</h1>
+    <h1>CSCE242 SiteHome</h1>
     <p>John S. Stritzinger</p>
     <p>University of South Carolina</p>
 </header>
