--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
             <h5>Portias FlexTemplate</h5>
             <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/titlepic3.png" alt="Assignment3"></a>
         </div>
-
+   
+        <div class="task-item">
+            <h3>Assignment4</h3>
+            <h5>HomePage Restyle</h5>
+            <a href="242index.html"><img src="./images/titlepic4.png" alt="Assignment4"></a>
+        </div>
        
     </div>
         
@@ -84,6 +89,16 @@
 
     <div class="idea right">
            <div class="idea-text">
+        <h2>Github Repo</h2>
+        <ul>
+            <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
+            <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
+        </ul>
+        </div>
+        <img src="./images/github.png" width="200px" height="200px" alt="Idea 3">
+       </div>
+    <div class="idea left">
+           <div class="idea-text">
         <h2>Assignments</h2>
         <ul>
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One</a></li>
@@ -92,16 +107,6 @@
         </ul>
         </div>
         <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
-       </div>
-    <div class="idea left">
-           <div class="idea-text">
-        <h2>Github Repo</h2>
-        <ul>
-            <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
-            <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
-        </ul>
-        </div>
-        <img src="./images/github.png" width="200px" height="200px" alt="Idea 3">
        </div>
 </section>
 
