--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
             <h5>HomePage Restyle</h5>
             <a href="242index.html"><img src="./images/titlepic4.png" alt="Assignment4"></a>
         </div>
-       
+        <div class="task-item">
+            <h3>Assignment5</h3>
+            <h5>React API Update</h5>
+            <a href="https://usc242.onrender.com/"><img src="./images/titlepic4.png" alt="Assignment4"></a>
+        </div>
+        <div class="task-item">
+            <h3>Assignment6</h3>
+            <h5>React UI Update</h5>
+            <a href="https://usc242.onrender.com"><img src="./images/titlepic4.png" alt="Assignment4"></a>
+        </div>
     </div>
         
 </section>
