--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         <div class="task-item">
             <h3>Assignment5</h3>
             <h5>React API Update</h5>
-            <a href="https://usc242.onrender.com/"><img src="./images/titlepic4.png" alt="Assignment4"></a>
+            <a href="https://api242.onrender.com/"><img src="./images/titlepic4.png" alt="reactapi"></a>
         </div>
         <div class="task-item">
             <h3>Assignment6</h3>
             <h5>React UI Update</h5>
-            <a href="https://usc242.onrender.com"><img src="./images/titlepic4.png" alt="Assignment4"></a>
+            <a href="https://react242-ho2o.onrender.com"><img src="./images/titlepic4.png" alt="reactui"></a>
         </div>
     </div>
         
