--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="task-item">
             <h3>Assignment6</h3>
             <h5>React UI Update</h5>
-            <a href="https://react242-ho2o.onrender.com"><img src="/images/FusionLicenseManager.jpeg" alt="reactui"></a>
+            <a href="https://react242-ho2o.onrender.com"><img src="./images/FusionLicenseManager.jpeg" alt="reactui"></a>
         </div>
     </div>
         
