--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
         <div class="task-item">
             <h3>Assignment1</h3>
             <h5>Initial Website Page</h5>
-            <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm"><img src="./images/titlepic1.png" alt="Assignment1"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm"><img src="./images/assign1.png" alt="Assignment1"></a>
         </div>
         
         <div class="task-item">
             <h3>Assignment2</h3>
             <h5>Site With Tables</h5>
-            <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/titlepic2.png" alt="Assignment2"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/assign2.png" alt="Assignment2"></a>
         </div>
 
         <div class="task-item">
             <h3>Assignment3</h3>
             <h5>Portias FlexTemplate</h5>
-            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/titlepic3.png" alt="Assignment3"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/flex2.png" alt="Assignment3"></a>
         </div>
    
         <div class="task-item">
             <h3>Assignment4</h3>
             <h5>HomePage Restyle</h5>
-            <a href="242index.html"><img src="./images/titlepic4.png" alt="Assignment4"></a>
+            <a href="242index.html"><img src="./images/sitestyle.png" alt="Assignment4"></a>
         </div>
         <div class="task-item">
             <h3>Assignment5</h3>
