--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="site.css">
 
     <!-- Inner flex layout -->
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="layouthome.css">
 </head>
 
 <body>
