--- a/index.html
+++ b/index.html
@@ -52,34 +52,40 @@
             <h3>Assignment1</h3>
             <h5>Initial Website Page</h5>
             <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm"><img src="./images/assign1.png" alt="Assignment1"></a>
+            <p>Lorem Ipsum 1234</p>
         </div>
         
         <div class="task-item">
             <h3>Assignment2</h3>
             <h5>Site With Tables</h5>
             <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/assign2.png" alt="Assignment2"></a>
+            <p>Lorem Ipsum 1234</p>
         </div>
 
         <div class="task-item">
             <h3>Assignment3</h3>
             <h5>Portias FlexTemplate</h5>
             <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/flex1.png" alt="Assignment3"></a>
+            <p>Lorem Ipsum 1234</p>
         </div>
    
         <div class="task-item">
             <h3>Assignment4</h3>
             <h5>HomePage Restyle</h5>
             <a href="242index.html"><img src="./images/sitestyle.png" alt="Assignment4"></a>
+            <p>Lorem Ipsum 1234</p>
         </div>
         <div class="task-item">
             <h3>Assignment5</h3>
             <h5>React API Update</h5>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="reactapi"></a>
+            <p>Lorem Ipsum 1234</p>
         </div>
         <div class="task-item">
             <h3>Assignment6</h3>
             <h5>React UI Update</h5>
             <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="reactui"></a>
+            <p>Lorem Ipsum 1234</p>
         </div>
     </div>
         
