--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h4>Assignment2</h4>
             <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/assign2.png" alt="Assignment2"></a>
             <h6>Site With Tables</h6>
-            <p>Custom Page w Tables/Quicklinks</p>
+            <p>Custom Page w Tables & Quicklinks</p>
         </div>
 
         <div class="task-item">
@@ -79,13 +79,13 @@
             <h4>Assignment5</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="reactapi"></a>
             <h6>React API Update</h6>
-            <p>Lorem Ipsum 1234</p>
+            <p>ReactAPI URL(accounts)</p>
         </div>
         <div class="task-item">
             <h4>Assignment6</h4>
             <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="reactui"></a>
             <h5>React UI Update</h5>
-            <p>Lorem Ipsum 1234</p>
+            <p>React Temp Landing</p>
         </div>
     </div>
         
