--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h4>Assignment5</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="reactapi"></a>
             <h6>React API Update</h6>
-            <p>ReactAPI URL(accounts)</p>
+            <p>ReactAPI URL(/licenses)</p>
         </div>
         <div class="task-item">
             <h4>Assignment6</h4>
