--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -1,5 +1,6 @@
 <html>
     <link rel="stylesheet" href="site.css"> 
+    <link rel="stylesheet" href="layout.css"> 
 <head>
     <title>Portfolio Page</title>
 <style>
@@ -110,6 +111,7 @@ margin: auto 0;
 </ul>
 </div>
 </div>
+    
 </div>
     </body>
     <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
