--- a/vitae.html
+++ b/vitae.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css">    
+<link rel="stylesheet" href="layout.css">    
 <head><title>Vitae</title>
 <style>
 #hist_work{margin-left: 30px;}
