--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div class="image-row" align="center"><figure><img src="./images/image2.png" width="440px" height="440px"><figcaption>Skiing</figcaption></figure><figure><img src="./images/image3.png" width="440px" height="440px"><figcaption>OutDoor Adventures</figcaption></figure></div>    
-</div>
+
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
 
@@ -85,9 +85,11 @@
     </div>
 
 </section>  
+</div>
+<div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div>
 </body>
-<footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
+
 
 
 
