--- a/vitae.html
+++ b/vitae.html
@@ -100,6 +100,6 @@
 </section>
 
 </div>
+<div class="footer">&copy2026 Cocky Consulting, Inc</div>
 </body>
-<footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
 </html>
