--- a/interests.html
+++ b/interests.html
@@ -93,6 +93,6 @@
 </section>
 
 </div>
+<div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div>
 </body>
-<footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
