--- a/usc.html
+++ b/usc.html
@@ -47,7 +47,42 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div class="image-row" align="center"><figure><img src="./images/image6.png" width="440px" height="440px"><figcaption>USC Sports</figcaption></figure><figure><img src="./images/image7.png" width="440px" height="440px"><figcaption>Campus Views</figcaption></figure></div>    
+<section class="middle-columns">
+
+    <!-- CENTER COLUMN: MIAMI IMAGES -->
+    <div class="mid-col">
+        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
+        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    </div>
+    <!-- LEFT COLUMN: QUICK LINKS -->
+    <div class="mid-col">
+        <h3>Quick Links</h3>
+        <hr>
+        <ul class="quick-links">
+            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
+            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
+            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
+        </ul>
+    </div>
+    <!-- RIGHT COLUMN: SITEMAP TABLE -->
+    <div class="mid-col">
+        <h3>Site Map</h3>
+        <hr>
+        <table class="sitemap-table">
+            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+            <tr><td>About</td><td><a href="../../about.html">About</a></td><td>01/15/2026</td></tr>
+            <tr><td>Interests</td><td><a href="../../interests.html">Interests</a></td><td>01/15/2026</td></tr>
+            <tr><td>USC Life</td><td><a href="../../usc.html">USC Life</a></td><td>01/15/2026</td></tr>
+            <tr><td>Portfolio</td><td><a href="../../portfoliopage.html">ClassWork</a></td><td>01/15/2026</td></tr>
+            <tr><td>Vitae</td><td><a href="../../vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+        </table>
+    </div>
+
+</section>
 </div>
+<div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div>
 </body>
-<footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
 </html>
