--- a/usc.html
+++ b/usc.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="site.css">    
+<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css"> 
 <title>USC242 HomePage - USC Activities</title>
     <style>
   .image-row 
