--- a/index.html
+++ b/index.html
@@ -51,41 +51,41 @@
         <div class="task-item">
             <h4>Assignment1</h4>
             <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm"><img src="./images/assign1.png" alt="Assignment1"></a>
-            <h6>Initial Website Page</h6>
-            <p>Initial Landing Page + 1</p>
+            <h5>Initial Website Page</h5>
+            <h6>Initial Landing Page + 1</h6>
         </div>
         
         <div class="task-item">
             <h4>Assignment2</h4>
             <a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html"><img src="./images/assign2.png" alt="Assignment2"></a>
-            <h6>Site With Tables</h6>
-            <p>Custom Page w Tables & Quicklinks</p>
+            <h5>Site With Tables</h5>
+            <h6>Custom Page w Tables & Quicklinks</h6>
         </div>
 
         <div class="task-item">
             <h4>Assignment3</h4>
             <a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html"><img src="./images/flex1.png" alt="Assignment3"></a>
-            <h6>Portias FlexTemplate</h6>
-            <p>Flex Layout with Narrow/Wide</p>
+            <h5>Portias FlexTemplate</h5>
+            <h6>Flex Layout with Narrow/Wide</h6>
         </div>
    
         <div class="task-item">
             <h4>Assignment4</h4>
             <a href="242index.html"><img src="./images/sitestyle.png" alt="Assignment4"></a>
-            <h6>HomePage Restyle</h6>
-            <p>Home Page Restyle</p>
+            <h5>HomePage Restyle</h5>
+            <h6>Add Modified Flex to Home.</h6>
         </div>
         <div class="task-item">
             <h4>Assignment5</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="reactapi"></a>
-            <h6>React API Update</h6>
-            <p>ReactAPI URL(/licenses)</p>
+            <h5>React API Update</h5>
+            <h6>ReactAPI URL(/licenses)</h6>
         </div>
         <div class="task-item">
             <h4>Assignment6</h4>
             <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="reactui"></a>
             <h5>React UI Update</h5>
-            <p>React Temp Landing</p>
+            <h6>React Temp Landing</h6>
         </div>
     </div>
         
