--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="idea left">
            <div class="idea-text">
         <h2>Projects</h2>
-        <ul>
+        <ul style="float: left; margin-left: -5px; align: left;">
             <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">Project Description</a></li>
         </ul>
     </div>
@@ -105,7 +105,7 @@
     <div class="idea right">
            <div class="idea-text">
         <h2>Github Repo</h2>
-        <ul>
+        <ul style="float: left; margin-left: -5px; align: left;">
             <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
         </ul>
@@ -115,7 +115,7 @@
     <div class="idea left">
            <div class="idea-text">
         <h2>Assignments</h2>
-        <ul>
+        <ul style="float: left; margin-left: -5px; align: left;">
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three</a></li>
