--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -53,7 +53,7 @@
     <div class="important-text">
         <h3>Very Important Text</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>2-Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
     </div>
 
     <div class="tasks">
