--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -11,7 +11,7 @@
 .tablecontainer
 {
 color: white;
-background-color: lightblue;
+background-color: #570008;
 text-align: center;
 margin: 0 auto;
 }
@@ -20,7 +20,7 @@ table
 text-align: center;
 font-size: 11pt;
 color: white;
-background-color: lightblue;
+background-color: #570008;
 max-width: 400px;
 margin: 0 auto;
 }
