--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -11,7 +11,7 @@
 .tablecontainer
 {
 color: white;
-background-color: #570008;
+background-color: black;
 text-align: center;
 margin: 0 auto;
 }
@@ -20,7 +20,7 @@ table
 text-align: center;
 font-size: 11pt;
 color: white;
-background-color: #570008;
+background-color: white;
 max-width: 400px;
 margin: 0 auto;
 }
@@ -127,7 +127,7 @@ a
 <HR>
 <div align="center">
 <div class="row">
-<div class="column1" style="background-color: #570008">
+<div class="column1" style="background-color: black">
   <span align="center" style="align: left;"><H3>Sports Quick Links</H3></span><HR>
   <ul>
     <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
@@ -140,7 +140,7 @@ a
 </ul>
 </div>
 <div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.jpg" width="47%" height="330px"><img src="./images/usc4.png" width="47%" height="330px"></span></div></div>
-<div class="column1" style="background-color: #570008">
+<div class="column1" style="background-color: black">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
     <table>
