--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -43,7 +43,7 @@ height: 25px;
 }
 ul
 {
-background-color: pink;
+background-color: black;
 color: white;
 display: block;
 list-style-type: disc; /* Default bullet */
@@ -77,7 +77,7 @@ margin: 0 auto;
 }
 .column1 ul 
 { 
-text-align: left; 
+text-align: left;
 }
 p
 {
