--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -20,7 +20,7 @@ table
 text-align: center;
 font-size: 11pt;
 color: white;
-background-color: white;
+background-color: black;
 max-width: 400px;
 margin: 0 auto;
 }
@@ -92,12 +92,12 @@ margin-left: 30px;
 }
 
 a:visited {
-    color: black; 
+    color: white; 
 }
 
 a
 {
-   color: black; 
+   color: white; 
 }
 </style>
      </head>
