--- a/assignments/02-basic-css/index.html
+++ b/assignments/02-basic-css/index.html
@@ -99,6 +99,11 @@ a
 {
    color: white; 
 }
+
+#SPQL
+{
+color: white;
+}
 </style>
      </head>
   <body>
@@ -128,7 +133,7 @@ a
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: black">
-  <span align="center" style="align: left;"><H3>Sports Quick Links</H3></span><HR>
+  <span align="center" style="align: left;"><H3 id="SPQL">Sports Quick Links</H3></span><HR>
   <ul>
     <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
     <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics Home Page</a></li>
