--- a/about.html
+++ b/about.html
@@ -85,9 +85,13 @@
     </div>
 
 </section>  
-<div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div>
+
 </body>
+  <footer>
+    <p>&copy; 2025 Cocky Consulting, Inc.</p>
+  </footer>
 </html>
+
 
 
 
