--- a/interests.html
+++ b/interests.html
@@ -55,6 +55,7 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <div class="image-row" align="center"><figure><img src="./images/image4.png" width="440px" height="440px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="./images/image5.png" width="440px" height="440px"><figcaption>Golf</figcaption></figure></div>    
+</div>
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
 
@@ -92,7 +93,10 @@
 
 </section>
 
-</div>
-<div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div>
+
+
 </body>
+    <footer>
+    <p>&copy; 2025 Cocky Consulting, Inc.</p>
+</footer>
 </html>
