--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -111,6 +111,7 @@ margin: auto 0;
 </ul>
 </div>
 </div>
+
    <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
 
@@ -148,7 +149,7 @@ margin: auto 0;
 
 </section>
  
-</div>
+
     </body>
-    <footer class="footer">&copy2026 Cocky Consulting, Inc</footer>
+    <footer><p>&copy2026 Cocky Consulting, Inc</p></footer>
 </html>
