--- a/usc.html
+++ b/usc.html
@@ -84,6 +84,6 @@
 
 </section>
 </div>
-<div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div>
 </body>
+<footer>&copy2025&nbsp&nbspCocky Consulting, Inc</footer>
 </html>
