--- a/vitae.html
+++ b/vitae.html
@@ -100,6 +100,7 @@
 </section>
 
 </div>
-<div class="footer">&copy2026 Cocky Consulting, Inc</div>
+
 </body>
+<footer>&copy2026 Cocky Consulting, Inc</footer>
 </html>
