--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -111,6 +111,9 @@ margin: auto 0;
 </ul>
 </div>
 </div>
+</div>
+
+
 
    <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
