--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <section class="ideas">
     <div class="idea left">
            <div class="idea-text">
-        <h2>Projects</h2>
-        <ul style="float: left; margin-left: -5px; align: left;">
+        <h2>Projects</h2><BR>
+        <ul style="float: left; margin-left: -1px; align: left;">
             <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">Project Description</a></li>
         </ul>
     </div>
@@ -104,8 +104,8 @@
 
     <div class="idea right">
            <div class="idea-text">
-        <h2>Github Repo</h2>
-        <ul style="float: left; margin-left: -5px; align: left;">
+        <h2>Github Repo</h2><BR>
+        <ul style="float: left; margin-left: -1px; align: left;">
             <li><a href="https://github.com/jssg33/usc242/">Github Repository Access</a></li>
             <li><a href="https://jssg33.github.io/usc242/index.html">Github IO Main Page</a></li>
         </ul>
@@ -114,8 +114,8 @@
        </div>
     <div class="idea left">
            <div class="idea-text">
-        <h2>Assignments</h2>
-        <ul style="float: left; margin-left: -5px; align: left;">
+        <h2>Assignments</h2><BR>
+        <ul style="float: left; margin-left: -1px; align: left;">
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three</a></li>
