--- a/index.html
+++ b/index.html
@@ -77,13 +77,19 @@
         </div>
         <div class="task-item">
             <h4>Assignment5</h4>
-            <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="reactapi"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/sitestyle.png" alt="Assignment5"></a>
+            <h5>HomePage Restyle</h5>
+            <h6>Add Modified Flex to Home.</h6>
+        </div>
+        <div class="task-item">
+            <h4>Assignment6</h4>
+            <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Assignment6reactapi"></a>
             <h5>React API Update</h5>
             <h6>ReactAPI URL(/licenses)</h6>
         </div>
         <div class="task-item">
-            <h4>Assignment6</h4>
-            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="reactui"></a>
+            <h4>Assignment7</h4>
+            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Assignment7reactui"></a>
             <h5>React UI Update</h5>
             <h6>React Temp Landing</h6>
         </div>
@@ -119,6 +125,10 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three</a></li>
+            <li><a href="https://jssg33.github.io/usc242/242index.html">Assignment Four</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five</a></li>
+            <li><a href="https://api242.onrender.com/">Assignment Six</a></li>
+            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Seven</a></li>
         </ul>
         </div>
         <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
