--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div class="task-item">
             <h4>Assignment5</h4>
             <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/sitestyle.png" alt="Assignment5"></a>
-            <h5>HomePage Restyle</h5>
-            <h6>Add Modified Flex to Home.</h6>
+            <h5>CSS Page Two</h5>
+            <h6>Mirror USC Medicine Homepage.</h6>
         </div>
         <div class="task-item">
             <h4>Assignment6</h4>
