--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="task-item">
             <h4>Assignment5</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/sitestyle.png" alt="Assignment5"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
             <h5>CSS Page Two</h5>
             <h6>Mirror USC Medicine Homepage.</h6>
         </div>
