--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="task-item">
             <h4>Assignment1</h4>
-            <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm"><img src="./images/assign1.png" alt="Assignment1"></a>
+            <a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.htm1"><img src="./images/assign1.png" alt="Assignment1"></a>
             <h5>Initial Website Page</h5>
             <h6>Initial Landing Page + 1</h6>
         </div>
