--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
             <h5>React UI Update</h5>
             <h6>React Temp Landing</h6>
         </div>
+        <div class="task-item">
+            <h4>Assignment8</h4>
+            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Assignment7reactui"></a>
+            <h5>Figma Wireframe Layout</h5>
+            <h6>PDF Summary of Wireframe</h6>
+        </div>
+        
+        <div class="task-item">
+            <h4>Assignment9</h4>
+            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Assignment7reactui"></a>
+            <h5>Figma Wireframe Highlights</h5>
+            <h6>Movie of Wireframe Layout</h6>
+        </div>
     </div>
         
 </section>
