--- a/index.html
+++ b/index.html
@@ -135,13 +135,15 @@
            <div class="idea-text">
         <h2>Assignments</h2>
         <ul>
-            <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One</a></li>
-            <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two</a></li>
-            <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three</a></li>
-            <li><a href="https://jssg33.github.io/usc242/242index.html">Assignment Four</a></li>
-            <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five</a></li>
-            <li><a href="https://api242.onrender.com/">Assignment Six</a></li>
-            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Seven</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html">Assignment One - Landing + 1</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html">Assignment Two - Tables and Lists</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
+            <li><a href="https://jssg33.github.io/usc242/242index.html">Assignment Four - Homepage Redesign</a></li>
+            <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
+            <li><a href="https://api242.onrender.com/">Assignment Six - Render React Backoffice</a></li>
+            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Seven - Render UI</a></li>
+            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Eight - Figma Wireframe Doc</a></li>
+            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Nine - Figma Wireframe Movie</a></li>
         </ul>
         </div>
         <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
