--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
             <li><a href="https://api242.onrender.com/">Assignment Six - Render React Backoffice</a></li>
             <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Seven - Render UI</a></li>
-            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Eight - Figma Wireframe Doc</a></li>
-            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Nine - Figma Wireframe Movie</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf">Assignment Eight - Figma Wireframe Doc</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">Assignment Nine - Figma Wireframe Movie</a></li>
         </ul>
         </div>
         <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
