--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
            <div class="idea-text">
         <h2>Projects</h2>
         <ul>
-            <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">Project Description</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf" target="_blank">P1 - Project Description</a></li>
+            <li><a href="https://api242.onrender.com/">P2 - Render React Backoffice</a></li>
+            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">P3 - Render UI</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf">P4 - Figma Wireframe Doc</a></li>
+            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">P5 - Figma Wireframe Movie</a></li>
         </ul>
     </div>
          <img src="./images/react.png" width="200px" height="200px" alt="Idea 1">
@@ -140,10 +144,7 @@
             <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html">Assignment Three - Portias Flexbox</a></li>
             <li><a href="https://jssg33.github.io/usc242/242index.html">Assignment Four - Homepage Redesign</a></li>
             <li><a href="https://jssg33.github.io/usc242/assignments/05-med-recast/index.html">Assignment Five - CSS Recast</a></li>
-            <li><a href="https://api242.onrender.com/">Assignment Six - Render React Backoffice</a></li>
-            <li><a href="https://react242-ho2o.onrender.com/indexbase.html">Assignment Seven - Render UI</a></li>
-            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf">Assignment Eight - Figma Wireframe Doc</a></li>
-            <li><a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4">Assignment Nine - Figma Wireframe Movie</a></li>
+
         </ul>
         </div>
         <img src="./images/assignment.png" width="200px" height="200px" alt="Idea 2">
