--- a/index.html
+++ b/index.html
@@ -81,34 +81,44 @@
             <h5>CSS Page Two</h5>
             <h6>Mirror USC Medicine Homepage.</h6>
         </div>
-        <div class="task-item">
-            <h4>Assignment6</h4>
-            <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Assignment6reactapi"></a>
+
+    </div>
+</section>
+<HR>
+<section class="projectdetails">
+            <div class="project-item">
+            <h4>Project1</h4>
+            <a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf"><img src="./images/project.PNG" alt="Project1Description"></a>
+            <h5>Project Overview Document</h5>
+            <h6>ReactAPI URL(/licenses)</h6>
+        </div>    
+        <div class="project-item">
+            <h4>Project2</h4>
+            <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
             <h5>React API Update</h5>
             <h6>ReactAPI URL(/licenses)</h6>
         </div>
-        <div class="task-item">
-            <h4>Assignment7</h4>
-            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Assignment7reactui"></a>
+        <div class="project-item">
+            <h4>Project3</h4>
+            <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
             <h5>React UI Update</h5>
             <h6>React Temp Landing</h6>
         </div>
-        <div class="task-item">
-            <h4>Assignment8</h4>
+        <div class="project-item">
+            <h4>Project4</h4>
             <a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
             <h5>Figma Wireframe Layout</h5>
             <h6>PDF Summary of Wireframe</h6>
         </div>
         
-        <div class="task-item">
-            <h4>Assignment9</h4>
+        <div class="project-item">
+            <h4>Project5</h4>
             <a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaMovie"></a>
             <h5>Figma Wireframe Highlights</h5>
             <h6>Movie of Wireframe Layout</h6>
         </div>
-    </div>
-        
-</section>
+</section>    
+<HR>
     <!-- IDEA SECTIONS -->
     <section class="ideas">
     <div class="idea left">
