--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
-
+<H1>Assignments</H1>
 
     <div class="tasks">
 
@@ -81,38 +81,44 @@
             <h5>CSS Page Two</h5>
             <h6>Mirror USC Medicine Homepage.</h6>
         </div>
-
+        <div class="task-item">
+            <h4>Assignment7</h4>
+            <a href="https://jssg33.github.io/usc242/assignments/07-javascript-intro/index.html"><img src="./images/USCMed.png" alt="Assignment5"></a>
+            <h5>Javascript Basics</h5>
+            <h6>Simple Javascript Excercises</h6>
+        </div>
     </div>
 </section>
-<HR>
+
 <section class="projectdetails">
+<HR>
+    <H1>Project Tasks</H1>
             <div class="project-item">
-            <h4>Project1</h4>
+            <h4>Project Task1</h4>
             <a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf"><img src="./images/project.PNG" alt="Project1Description"></a>
             <h5>Project Overview Document</h5>
             <h6>ReactAPI URL(/licenses)</h6>
         </div>    
         <div class="project-item">
-            <h4>Project2</h4>
+            <h4>Project Task2</h4>
             <a href="https://api242.onrender.com/"><img src="./images/renderapi.PNG" alt="Project2reactapi"></a>
             <h5>React API Update</h5>
             <h6>ReactAPI URL(/licenses)</h6>
         </div>
         <div class="project-item">
-            <h4>Project3</h4>
+            <h4>Project Task3</h4>
             <a href="https://react242-ho2o.onrender.com/indexbase.html"><img src="./images/FusionLicenseManager.jpeg" alt="Project3reactui"></a>
             <h5>React UI Update</h5>
             <h6>React Temp Landing</h6>
         </div>
         <div class="project-item">
-            <h4>Project4</h4>
+            <h4>Project Task4</h4>
             <a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.pdf"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaPDF"></a>
             <h5>Figma Wireframe Layout</h5>
             <h6>PDF Summary of Wireframe</h6>
         </div>
-        
         <div class="project-item">
-            <h4>Project5</h4>
+            <h4>Project Task5</h4>
             <a href="https://jssg33.github.io/usc242/project/wirefame/Wireframe.mp4"><img src="https://jssg33.github.io/usc242/project/wirefame/images/FigmaHome.png" alt="FigmaMovie"></a>
             <h5>Figma Wireframe Highlights</h5>
             <h6>Movie of Wireframe Layout</h6>
