--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -33,25 +33,23 @@
 </head>
 
 <body>
-
-<!-- TOP BLACK MENU (site.css) -->
-<div class="topnav">
+    <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="242index.html">242 Home</a>
-            <a href="about.html">AboutMe</a>
-            <a href="interests.html">MyInterests</a>
-            <a href="usc.html">USC</a>
-            <a href="portfoliopage.html">Portfolio</a>
-            <a href="vitae.html">Vitae</a>
+            <a href="../../index.html">Home</a>
+            <a href="../../242index.html">242 Home</a>
+            <a href="../../about.html">AboutMe</a>
+            <a href="../../interests.html">MyInterests</a>
+            <a href="../../usc.html">USC</a>
+            <a href="../../portfoliopage.html">Portfolio</a>
+            <a href="../../vitae.html">Vitae</a>
         </div>
     </div>
 
     <div class="right-links">
-        <a href="login.html">Login</a>
-        <a href="logout.html">Logout</a>
+        <a href="../../login.html">Login</a>
+        <a href="../../logout.html">Logout</a>
     </div>
 </div>
 
