--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
-<H1>Assignments</H1>
+<H4>Assignments</H4>
 
     <div class="tasks">
 
@@ -90,9 +90,10 @@
     </div>
 </section>
 
-<section class="projectdetails">
 <HR>
-    <H1>Project Tasks</H1>
+<section class="projectdetails">
+    <H4>Project Tasks</H4>
+    <div class="projecttasks">
             <div class="project-item">
             <h4>Project Task1</h4>
             <a href="https://jssg33.github.io/usc242/project/part1/CSCE242PROJECTPART1v2.pdf"><img src="./images/project.PNG" alt="Project1Description"></a>
@@ -123,6 +124,7 @@
             <h5>Figma Wireframe Highlights</h5>
             <h6>Movie of Wireframe Layout</h6>
         </div>
+    </div>
 </section>    
 <HR>
     <!-- IDEA SECTIONS -->
