--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 </section>
 
 <section class="projectdetails">
-    <H4>Project Tasks</H4>
+    <span style="align: left;"><H4>Project Tasks</H4></span>
+    
     <div class="projecttasks">
             <div class="project-item">
             <h4>Project Task1</h4>
