--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="site.css">
 
     <!-- Inner flex layout -->
-    <link rel="stylesheet" href="layouthome.css">
+    <link rel="stylesheet" href="layout.css">
 <style>
 * {
   box-sizing: border-box;
