--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -61,7 +61,8 @@
     <p>University of South Carolina</p>
 </header>
 
-<h2>Three Equal Columns</h2>
+<section class="top-section">
+    <h2>Three Equal Columns</h2>
 
 <div class="row">
   <div class="column" style="background-color:#aaa;">
@@ -77,6 +78,43 @@
     <p>Some text..</p>
   </div>
 </div>
+</section>
+   <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
+<section class="middle-columns">
+
+    <!-- CENTER COLUMN: MIAMI IMAGES -->
+    <div class="mid-col">
+        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
+        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    </div>
+    <!-- LEFT COLUMN: QUICK LINKS -->
+    <div class="mid-col">
+        <h3>Quick Links</h3>
+        <hr>
+        <ul class="quick-links">
+            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
+            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
+            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
+        </ul>
+    </div>
+    <!-- RIGHT COLUMN: SITEMAP TABLE -->
+    <div class="mid-col">
+        <h3>Site Map</h3>
+        <hr>
+        <table class="sitemap-table">
+            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+            <tr><td>About</td><td><a href="../../about.html">About</a></td><td>01/15/2026</td></tr>
+            <tr><td>Interests</td><td><a href="../../interests.html">Interests</a></td><td>01/15/2026</td></tr>
+            <tr><td>USC Life</td><td><a href="../../usc.html">USC Life</a></td><td>01/15/2026</td></tr>
+            <tr><td>Portfolio</td><td><a href="../../portfoliopage.html">ClassWork</a></td><td>01/15/2026</td></tr>
+            <tr><td>Vitae</td><td><a href="../../vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+        </table>
+    </div>
+
+</section>    
 
 </body>
 <footer>&copy 2025, Cocky Consulting Inc.</footer>
