--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -56,7 +56,7 @@
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
 
 <header>
-    <h1>SiteHome</h1>
+    <h1>Javascript Basics</h1>
     <p>John S. Stritzinger</p>
     <p>University of South Carolina</p>
 </header>
