--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -65,17 +65,16 @@
     <h2>Three Equal Columns</h2>
 
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
-  </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
-  </div>
-  <div class="column" style="background-color:#ccc;">
-    <h2>Column 3</h2>
-    <p>Some text..</p>
+  <div class="column" style="background-color:#aaa; border: 2px solid black;" onclick="callupdategeometry();">
+    <h2>Geometry</h2>
+    </div>
+  <div class="column" style="background-color:#bbb; border: 2px solid black;">
+    <h2>Select a Date:</h2>
+    <input type="date" id="birthday" name="birthday" onchange="calltextupdate();">
+   </div>
+  <div class="column" style="background-color:#ccc; border: 2px solid black;" onclick="callimageframer();">
+    <h2>Frame Image</h2>
+    <p><img src="./images/sunshine.png"</p>
   </div>
 </div>
 </section>
@@ -115,7 +114,22 @@
     </div>
 
 </section>    
+<script>
+function calltextupdate()
+{
+alert("setting text");
+}
+function callupdategeometry()
+{
+alert("updating geometry");
+}
+function callimageframer()
+{
+alert("updating image framing");
+}
 
+    
+</script>
 </body>
 <footer>&copy 2025, Cocky Consulting Inc.</footer>
 </html>
