--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -61,9 +61,11 @@
     <p>University of South Carolina</p>
 </header>
 
-<section class="top-section">
-    <h2>Three Equal Columns</h2>
-
+<section class="assign7">
+    <div align="center">
+    <h2>Assignment7</h2>
+    <h4>Introduction To Javascript</h4>
+    </div>
 <div class="row">
   <div class="column" style="background-color:#aaa; border: 2px solid black;" onclick="callupdategeometry();">
     <h2>Geometry</h2>
