--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -56,16 +56,11 @@
 <!-- EVERYTHING BELOW THIS POINT IS CONTROLLED BY layout.css -->
 
 <header>
-    <h1>Javascript Basics</h1>
-    <p>John S. Stritzinger</p>
-    <p>University of South Carolina</p>
+    <h1>Assignment7</h1>
+    <p>Introduction To Javascript/p>
 </header>
 
 <section class="assign7">
-    <div align="center">
-    <h2>Assignment7</h2>
-    <h4>Introduction To Javascript</h4>
-    </div>
 <BR><BR>
 <div class="row">
   <div class="column" style="background-color:#aaa; border: 2px solid black;" onclick="callupdategeometry();">
