--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -20,8 +20,10 @@
   float: left;
   width: 33.33%;
   padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
+  height: 300px;
+  vertical-align: top;
+  text-align: center;
+  }
 
 /* Clear floats after the columns */
 .row:after {
