--- a/assignments/07-javascript-intro/index.html
+++ b/assignments/07-javascript-intro/index.html
@@ -59,7 +59,7 @@
 
 <header>
     <h1>Assignment7</h1>
-    <p>Introduction To Javascript/p>
+    <p>Introduction To Javascript</p>
 </header>
 
 <section class="assign7">
@@ -67,14 +67,16 @@
 <div class="row">
   <div class="column" style="background-color:#aaa; border: 2px solid black;" onclick="callupdategeometry();">
     <h2>Geometry</h2>
+    <p id="outputtarget"><img id="sometriangle" src="./images/triangle.png" style="visibility: hidden;"></p>
     </div>
   <div class="column" style="background-color:#bbb; border: 2px solid black;">
     <h2>Select a Date:</h2>
-    <input type="date" id="birthday" name="birthday" onchange="calltextupdate();">
+    <input type="date" id="somedayid" name="somedayname" onchange="calltextupdate();">
+    <p id="outputtext"></p>
    </div>
   <div class="column" style="background-color:#ccc; border: 2px solid black;" onclick="callimageframer();">
     <h2>Frame Image</h2>
-    <p><img src="./images/sunshine.png"</p>
+    <p><img id="sunshineimage" src="./images/sunshine.png"</p>
   </div>
 </div>
 </section>
@@ -115,19 +117,29 @@
 
 </section>    
 <script>
+
 function calltextupdate()
 {
 alert("setting text");
+const somevalue = document.getElementById("somedayid").value;
+const element = document.getElementById("outputtext");
+var somestring = "Your Date is:" + somevalue;
+element.InnerHTML = somestring;
 }
+
 function callupdategeometry()
 {
 alert("updating geometry");
+const element = document.getElementById("sometriangle"); 
+element.style.visibility = "visible";
 }
+
 function callimageframer()
 {
 alert("updating image framing");
+const element = document.getElementById("sunshineimage"); 
+element.style.border = "2px solid purple";    
 }
-
     
 </script>
 </body>
